feat: replace signup with admin-only user creation panel